<?xml version="1.0"?>
<package format="2">
  <name>butia_quiz</name>
  <version>0.0.0</version>
  <description>The butia_quiz package</description>

  <maintainer email="laura@todo.todo">laura</maintainer>
  <maintainer email="pedro@todo.todo">pedro</maintainer>
  <maintainer email="emilly@todo.todo">emilly</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
